# 02322Projekt2-Yukon

./: .gitignore  CMakeLists.txt  Untitled Diagram.drawio  board.c  board.h  column.c  column.h  command.c  command.h  deck.c  deck.h  filehandler.c  filehandler.h  main.c
Controllers/: Filereader.c  Filereader.h
Models/: card.c
TEST-files/: board-test.c  board-test.h  column-test.c  column-test.h  invalidDeckDublicateCards.txt  invalidDeckTooManyCards.txt  main-test.c
Views/: BoardView.h
